--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
+        "ext-simplexml": "*",
         "darryldecode/cart": "^4.2",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -20,9 +21,10 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.6",
         "livewire/livewire": "^2.0",
+        "maatwebsite/excel": "^3.1",
+        "mailchimp/marketing": "^3.0",
         "phpoffice/phpspreadsheet": "^1.18",
-        "silber/bouncer": "v1.0.0-rc.10",
-        "ext-simplexml": "*"
+        "silber/bouncer": "v1.0.0-rc.10"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
@@ -48,7 +50,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/helpers_functions.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
