--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "maatwebsite/excel": "^3.1",
         "mailchimp/marketing": "^3.0",
         "phpoffice/phpspreadsheet": "^1.18",
-        "silber/bouncer": "v1.0.0-rc.10"
+        "silber/bouncer": "v1.0.0-rc.10",
+        "ext-curl": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
